[package]
name = "iconify"
version = "0.2.2"
edition = "2021"
authors = ["Matthew Taylor <wrapperupalt@gmail.com>"]
categories = ["development-tools::code-generators"]
description = "Proc-macros for generating icons from the Iconify API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wrapperup/iconify-rs"
readme = "README.md"
keywords = ["iconify", "icons", "proc-macro"]

[features]
default = ["cache", "tls"]
tls = ["ureq/tls"]
cache = ["directories", "blake3"]
offline = ["blake3"]

[lib]
proc-macro = true
doctest = false # requires network access, can't really use doctests

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = "2.0.31"
ureq = { version = "2.7.1", default-features = false }
directories = { version = "5.0.1", optional = true }
url = "2.4.1"
blake3 = { version = "1.4.1", optional = true }
hex = "0.4.3"

[dev-dependencies]
iconify = { path = ".", default-features = false }
