[package]
name = "iconify"
version = "0.3.1"
edition = "2021"
authors = ["Matthew Taylor <wrapperupalt@gmail.com>"]
categories = ["development-tools::code-generators"]
description = "Proc-macros for generating icons from the Iconify API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wrapperup/iconify-rs"
readme = "README.md"
keywords = ["iconify", "icons", "proc-macro"]

[features]
default = ["cache", "tls"]
tls = ["ureq/tls"]
cache = ["directories", "blake3"]
offline = ["blake3"]

[lib]
proc-macro = true
doctest = false # requires network access, can't really use doctests

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = "2.0.68"
ureq = { version = "2.9.7", default-features = false }
directories = { version = "5.0.1", optional = true }
url = "2.5.2"
blake3 = { version = "1.5.3", optional = true }
hex = "0.4.3"

[dev-dependencies]
iconify = { path = ".", default-features = false }
